--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 --- 
-title: "GR5702 - CC8 - Final Project"
+title: "GR5702 - g15 - Final Project"
 author: "Ying Hong - Shiyuan Xu - Longcong Xu"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
