--- a/index.Rmd
+++ b/index.Rmd
@@ -6,4 +6,6 @@ site: bookdown::bookdown_site
 ---
 
 # Introduction
-This is the final project for GR5702 in Columbia University. 
+At a recent Halloween party, the host prepared up to 10 different types of alcohol for the guests, who tasted them one by one, commented on them, and shared their drinking habits as well as their drinking preferences. This inspired our team to explore people's alcohol consumption preferences. After browsing through a number of official government statistics websites, we were very fortunate to find historical records of alcohol consumption in Iowa for 2019 on the Iowa government website. We wonder if we can discover some of the alcohol consumption preferences of Iowa residents, and if store owners and suppliers might be able to rationalize the wholesale and inventory of alcohol if they are aware of people's preferences.
+
+
