--- a/data.Rmd
+++ b/data.Rmd
@@ -12,4 +12,12 @@ Describe any issues / problems with the data, either known or that you discover.
 
 ## Cleaning / transformation
 
+Describe the process of getting the data into a form in which you could work with it in R if relevant. If your code does not lend itself to being including in the `.Rmd`  file, provide a link to the folder or file(s) that contain(s) that code. (If your data did not require any cleaning or transformation before beginning EDA simply state that.)
+
+(suggested: approximately 1/2 page)
+
 ## Missing value analysis
+
+Describe any patterns you discover in missing values. If no values are missing, graphs should still be included showing that.
+
+(suggested: 2 graphs plus commentary)
