--- a/interactive.Rmd
+++ b/interactive.Rmd
@@ -2,116 +2,62 @@
 
 <script src="https://d3js.org/d3.v7.js"></script>
 
-## Put the line generator to work
+<svg id="withaxes" width="600" height="400"></svg>
 
-Now let's do it the direct way: bind the *datum* and calculate the path in one step:
-
-``` js
-d3.select("svg").append("path")
-    .datum(dataset)
-    .attr("d", mylinegen)
-    .attr("fill", "none")
-    .attr("stroke", "teal")
-    .attr("stroke-width", "5");
-```
-
-Finally, we'll add a class and style definitions:
-
-``` html
-<style>
-  .linestyle {
-    fill: none;
-    stroke: teal;
-    stroke-width: 5px;
-  }
-</style>
-```
-
-The `append("path")` line becomes:
-
-``` js
-svg.append("path")
-    .datum(dataset)
-    .attr("d", mylinegen)
-    .attr("class", "linestyle");
-```
-
-<svg id="noaxes" width="500" height="400">
-
-</svg>
-
-```{=html}
-<style>
-  .linestyle {
-    fill: none;
-    stroke: teal;
-    stroke-width: 5px;
-  }
-</style>
-```
-```{=html}
 <script>
-  const w = 500;
-  const h = 400;
-  let svg = d3.select("svg#noaxes");
-  const dataset = [ [0, 60], [1, 43], [2, 43], [3, 56],
-      [4, 45], [5, 62], [6, 49] ];
-  let xScale = d3.scaleBand()
-    .domain(d3.range(dataset.length))
-    .range([0, w]);
-  let yScale = d3.scaleLinear()
-    .domain([d3.min(dataset, d => d[1]) - 20,
-             d3.max(dataset, d => d[1]) + 20])
-    .range([h, 0]);
-  const mylinegen = d3.line()
-    .x(d => xScale(d[0]))
-    .y(d => yScale(d[1]));
-  svg.append("path")
-     .datum(dataset)
-     .attr("d", mylinegen)
-     .attr("class", "linestyle");
+  svg = d3.select("svg#withaxes")
+
+  const margin = {top: 20, right: 50, bottom: 30, left: 50}
+
+  const width =  +svg.attr("width") - margin.left - margin.right
+
+  const height = +svg.attr("height") - margin.top - margin.bottom
+
+  const g = svg.append("g").attr("transform", `translate(${margin.left}, ${margin.top})`);
+
+  const parseTime = d3.timeParse("%d-%b-%y");
+
+  xScale = d3.scaleTime().range([0, width]);
+
+  yScale = d3.scaleLinear()
+    .domain([20, 80])
+    .range([height, 0]);
+
+  const xAxis = d3.axisBottom()
+    .scale(xScale)
+    .tickFormat(d3.timeFormat("%m-%d"));
+
+  const line = d3.line()
+    .x(d => xScale(d.date))
+    .y(d => yScale(d.high));
+
+  const data =
+    [{"date":"1-Apr-18","high":60},
+    {"date":"2-Apr-18","high":43},
+    {"date":"3-Apr-18","high":43},
+    {"date":"4-Apr-18","high":56},
+    {"date":"5-Apr-18","high":45},
+    {"date":"6-Apr-18","high":62},
+    {"date":"7-Apr-18","high":49}];
+    data.forEach(function(d) {
+        d.date = parseTime(d.date);
+    });
+
+  xScale
+    .domain(d3.extent(data, d => d.date));
+
+  g.append("g")
+    .attr("transform", `translate(0, ${height})`)
+    .call(xAxis);
+
+  g.append("g")
+    .call(d3.axisLeft(yScale))
+
+  g.append("path")
+    .datum(data)
+    .attr("class", "line")
+    .attr("fill", "none")
+    .attr("stroke", "red")
+    .attr("stroke-width", 1.5)
+    .attr("d", line);
 </script>
-```
-Putting it all together, we have:
-
-``` html
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Line generator</title>
-    <script src="https://d3js.org/d3.v7.js"></script>
-    <style type ="text/css">
-      .linestyle {
-        fill: none;
-        stroke: teal;
-        stroke-width: 5px;
-      }
-    </style>
-  </head>
-  <body>
-    <script>
-      const w = 500;
-      const h = 400;
-      const svg = d3.select("svg#noaxes");
-      const dataset = [ [0, 60], [1, 43], [2, 43], [3, 56],
-          [4, 45], [5, 62], [6, 49] ];
-      let xScale = d3.scaleBand()
-        .domain(d3.range(dataset.length))
-        .range([0, w]);
-      let yScale = d3.scaleLinear()
-        .domain([d3.min(dataset, d => d[1]) - 20,
-                 d3.max(dataset, d => d[1]) + 20])
-        .range([h, 0]);
-      const mylinegen = d3.line()
-        .x(d => xScale(d[0]))
-        .y(d => yScale(d[1]));
-      svg.append("path")
-         .datum(dataset)
-         .attr("d", mylinegen)
-         .attr("class", "linestyle");
-    </script>
-
-  </body>
-</html>
-```
